<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThiThi</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_create">Create</string>
    <string name="action_report">Thống kê</string>
    <string name="hello_world">Hello world!</string>
    <string name="Username">User Name</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Confirmpasswrod">Confirm</string>
    <string name="Phone">Phone</string>
    <string name="Birthday">Birthday</string>
    <string name="Register">Register</string>
    <string name="Cancel">Cancel</string>
    <string name="Login">Login</string>
    <string name="Submit">Send</string>
    <string name="DetailPhoto">Detail photo</string>
    <string name="Comment">Comment</string>
    <string name="TextLike">9 people like this</string>
    <string name="TextUpload">Upload your photo</string>
    <string name="Upload">Upload</string>
    <string name="Photolike">Photo Liked</string>
    <string name="Delete">Delete</string>
	<string name="spinner_title">Select Label</string>
	
	<string name="BanhKem">Banh Kem</string>
	<string name="BanhNgot">Banh Ngot</string>
	<string name="Khac">Khac</string>
	<string name="Category">Loai Banh</string>
	<string name="ProductName">Ten Banh</string>
	<string name="Image">Hinh</string>
	<string name="RetailPrice">Giá bán lẻ</string>
	<string name="WholePrice">Giá bán sỷ</string>
	<string name="Report">Thống kê</string>
	<string name="CurrentDate">Hôm nay</string>
</resources>
