<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ListProductLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView
        android:id="@+id/tabBanhKem"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BanhKem"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/tabKhac"
        android:layout_toRightOf="@+id/tabBanhKem"
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Khac"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/tabBanhNgot"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/tabKhac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BanhNgot"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <GridView
        android:id="@+id/gridView1"
        android:numColumns="6"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
     >
    </GridView>

    

</RelativeLayout>