<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LoginPageLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground" >


    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="100dp"
        android:text="@string/Email"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edlogin_email"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="90dp"
        android:layout_toRightOf="@+id/tv_pass"
        android:background="@drawable/bg_search"
        android:drawablePadding="4dip"
        android:drawableRight="@drawable/ic_close"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:textColor="#666666"
         android:inputType="textEmailAddress"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_email"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="30dp"
        android:text="@string/Password"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edlogin_pass"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_below="@+id/tv_email"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@+id/tv_pass"
        android:background="@drawable/bg_search"
        android:drawablePadding="4dip"
        android:drawableRight="@drawable/ic_close"
        android:paddingLeft="10dip"
        android:paddingRight="5dip"
        android:singleLine="true"
        android:textColor="#666666"
        android:inputType="textPassword" 
        android:textSize="14sp" />
    
    <!-- Spinner Dropdown -->
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:prompt="@string/spinner_title"
        android:layout_marginTop="20dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:textColor="#000000"
    />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/edlogin_email"
        android:layout_below="@+id/edlogin_pass"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_btn_sandrift"
        android:text="@string/Login"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignRight="@+id/edlogin_email"
        android:layout_below="@+id/btn_login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_btn_sandrift"
        android:text="@string/Register"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/linear_login_eraser_email"
        android:layout_width="50dp"
        android:layout_height="30dp"
       
        android:layout_alignRight="@+id/edlogin_email"
        android:layout_alignTop="@+id/edlogin_email"
  
        android:orientation="vertical" >
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linear_login_eraser_password"
        android:layout_width="50dp"
        android:layout_height="30dp"
       
        android:layout_alignRight="@+id/edlogin_pass"
        android:layout_alignTop="@+id/edlogin_pass"
  
        android:orientation="vertical" >
    </LinearLayout>

</RelativeLayout>